--- a/CSS/style.css
+++ b/CSS/style.css
@@ -20,6 +20,7 @@ h1 {
     color: #d9dcd6;
 }
 
+/*Style for navigation bar */
  nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -38,7 +39,7 @@ a {
     text-decoration: none;
 }
 
-
+/*Removed image from CSS code*/
 #hero {
     height: 800px;
     width: 100%;
@@ -59,6 +60,7 @@ h2 {
     font-size: 36px;
 }
 
+/*Set image to the left */
 .float-left {
     float: left;
     margin-right: 25px;
@@ -69,6 +71,7 @@ h2 {
     margin-left: 25px;
 }
 
+/*Adds style to all content-soc class */
 .content-soc {
     margin-bottom: 20px;
     padding: 50px;
@@ -82,6 +85,7 @@ h2 {
     max-height: 200px;
 }
 
+/*Add style to id benefits*/
 #benefits {
     margin-right: 20px;
     padding: 20px;
